Fix flipping of sprite and create own scene

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "binding-of-isaac-clone.sln"
+    "dotnet.defaultSolution": "BindingOfIsaac.sln"
 }
